# rustgram-server-util

./: .gitignore  Cargo.toml
examples/: cache.rs  db.rs  local_file_handler.rs
rustgram-server-util/: Cargo.toml
rustgram-server-util-macros/: Cargo.toml
rustgram-server-util-macros/src/: lib.rs
rustgram-server-util/src/: error.rs
rustgram-server-util/src/db/: mariadb.rs  mod.rs
rustgram-server-util/src/file/: mod.rs
src/: error.rs  input_helper.rs  lib.rs  res.rs  simple_static_server.rs  url_helper.rs
src/cache/: array_cache.rs  mod.rs  redis.rs  redis_cache.rs
src/db/: id_handling.rs  mariadb.rs  mod.rs  sqlite.rs
src/db/custom_types/: date_str.rs  mod.rs
src/db/value/: convert.rs  de.rs  ser.rs
src/db/value/db/: mysql.rs  sqlite.rs
src/file/: local_storage.rs  mod.rs
src/static_var/: cache.rs  db.rs  file_handler.rs  mod.rs
src/static_var/db/: mod.rs  mysql.rs  sqlite.rs
src/value/: convert.rs  de.rs  mod.rs  ser.rs
src/value/db/: mysql.rs  sqlite.rs
tests/: tests_1_db.rs  tests_1_db_custom_date.rs  tests_1_db_value.rs  tests_2_cache.rs
