[package]
name = "rustgram-server-util"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"rustgram-server-util-macros"
]

[dependencies]
rustgram-server-util-macros = {version = "0.1.0", path = "./rustgram-server-util-macros", optional = true}

rustgram = "^0.1.8"
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.2"

# dotenv vars
dotenv = "0.15.0"
# for caching trait
async-trait = "0.1.56"

#_______________________________________________________________________________________________________________________
# to stream the input body
bytes = "1.4.0"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }

#_______________________________________________________________________________________________________________________
# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

#_______________________________________________________________________________________________________________________
# mysql db
mysql_async = { version = "0.32.2", optional = true, default-features = false, features = ["default-rustls"]}
mysql_common = { version= "0.30.3", optional = true }

# sqlite
deadpool-sqlite = { version= "0.5.0", optional = true }
rusqlite = { version = "0.28.0", features = ["bundled"], optional = true }

#_______________________________________________________________________________________________________________________

[dev-dependencies]
# id
uuid = {version="1.1.2", features= ["v4", "fast-rng"]}

[features]
default = ["mysql"]

mysql = ["mysql_async","mysql_common"]
sqlite = ["deadpool-sqlite","rusqlite"]

derive_macro = ["rustgram-server-util-macros"]
