[package]
name = "rustgram-server-util-macros"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustgram_server_util_macros"
proc-macro = true

[dependencies]
syn = { version = "*", features = ["extra-traits"] }
quote = "1.0"